--- a/priya.html
+++ b/priya.html
@@ -4,10 +4,10 @@
         <style>
         h1
         {
-            text-align: center;
+            text-align:center;
             font-size:40px;
             color:slateblue;
-            font-family: 'Trebuchet MS', sans-serif;
+            font-family:'Trebuchet MS', sans-serif;
         }
         p
         {
@@ -15,23 +15,84 @@
             font-family:'Times New Roman';
             font-size:40px;
             color:mediumvioletred;
-            font-family: 'Brush Script MT', cursive;
+            font-family:'Brush Script MT', cursive;
         }
         body
         {
-            background-image:url('https://img.freepik.com/premium-photo/happy-women-s-day-concept-top-view-roses-flower-with-heart-pink-pastel-background_53476-5778.jpg?w=1060');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;  
+            background-image:url('https://w0.peakpx.com/wallpaper/725/707/HD-wallpaper-wall-paint-texture-yellow-purple.jpg');
+            background-repeat:no-repeat;
+            background-attachment:fixed;
+            background-size:cover;  
+        }
+        body
+        {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .topnav
+        {
+            overflow: hidden;
+            background-color:rgb(149,135,222);
+        }
+        .topnav a
+        {
+            float: left;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+        .topnav a:hover
+        {
+            background-color: #ddd;
+            color:rgb(149,135,222);
+        }
+        .topnav a.active
+        {
+            background-color:rgb(149,135,222);
+            color: white;
+        }
+        .topnav-right
+        {
+            float: right;
+        }
+        aside
+        {
+            width: 30%;
+            padding-left: 15px;
+            margin-left: 15px;
+            float: right;
+        }
+        img
+        {
+            float:right;
+            border: 1px solid #ddd;
+            border-radius:25px;
+            padding:30px;
+            width:300px;
+        }
+        img:hover
+        {
+            box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
         }
         </style>
     </head>
 
 <body>
-    <br>
+    <div class="topnav">
+        <a class="active" href="https://priyanandini1507.github.io/priyanandini-pasupuleti/priya.html">Home</a>
+        <a href="https://priyanandini1507.github.io/priyanandiniabout2/About.html">About</a>
+        <a href="https://priyanandini1507.github.io/priyanandinischool/school.html">primary school</a>
+        <div class="topnav-right">
+          <a href="#search">Search</a>
+          <a href="#contact">Contact</a>
+        </div>
+    </div>
     <h1>PRIYANANDINI PASUPULETI</h1>
     <p>Look here for some positive vibes</p>
-    <img src="C:\Users\priya\OneDrive\Desktop\web pg\img\profilepic.jpeg" alt="profilephoto"
-    height="500">
+    <aside>
+    <img src="C:\Users\priya\OneDrive\Desktop\web pg\img\profilepic.jpeg" alt="profilephoto" height="600" class="center">
+    </aside>
 </body>
 </html>
