--- a/priya.html
+++ b/priya.html
@@ -17,6 +17,18 @@
             color:mediumvioletred;
             font-family:'Brush Script MT', cursive;
         }
+        h2
+        {
+            font-size:120px;
+            color:salmon;
+            font-family:'Trebuchet MS', sans-serif;
+        }
+        .column
+        {
+            float: left;
+            width: 50%;
+            padding: 10px;
+        }
         body
         {
             background-image:url('https://w0.peakpx.com/wallpaper/725/707/HD-wallpaper-wall-paint-texture-yellow-purple.jpg');
@@ -31,7 +43,9 @@
         }
         .topnav
         {
-            overflow: hidden;
+            overflow:hidden;
+            border-style: ridge;
+            border-color:salmon;
             background-color:rgb(149,135,222);
         }
         .topnav a
@@ -57,13 +71,7 @@
         {
             float: right;
         }
-        aside
-        {
-            width: 30%;
-            padding-left: 15px;
-            margin-left: 15px;
-            float: right;
-        }
+
         img
         {
             float:right;
@@ -76,14 +84,27 @@
         {
             box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
         }
+        .footer
+        {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            color:gold;
+            text-align: center;
+            background-image:url('https://w0.peakpx.com/wallpaper/725/707/HD-wallpaper-wall-paint-texture-yellow-purple.jpg');
+            background-repeat:no-repeat;
+            background-attachment:fixed;
+            background-size:cover;  
+        }
         </style>
     </head>
 
 <body>
     <div class="topnav">
-        <a class="active" href="https://priyanandini1507.github.io/priyanandini-pasupuleti/priya.html">Home</a>
-        <a href="https://priyanandini1507.github.io/priyanandiniabout2/About.html">About</a>
-        <a href="https://priyanandini1507.github.io/priyanandinischool/school.html">primary school</a>
+        <a class="active" href="https://priyanandini1507.github.io/priyanandini-pasupuleti/priya.html"><b>Home</b></a>
+        <a href="https://priyanandini1507.github.io/priyanandiniabout2/About.html"><b>About</b></a>
+        <a href="https://priyanandini1507.github.io/priyanandinischool/school.html"><b>Schooling</b></a>
         <div class="topnav-right">
           <a href="#search">Search</a>
           <a href="#contact">Contact</a>
@@ -91,8 +112,15 @@
     </div>
     <h1>PRIYANANDINI PASUPULETI</h1>
     <p>Look here for some positive vibes</p>
-    <aside>
-    <img src="C:\Users\priya\OneDrive\Desktop\web pg\img\profilepic.jpeg" alt="profilephoto" height="600" class="center">
-    </aside>
+    <div class="column"><h2>LIVE.....<br>LAUGH......<br>LOVE.......</h2>
+    <br><br><br>
+    </div>
+    <img src="file:///C:/Users/priya/OneDrive/Desktop/web%20pg/img/profilepic.jpeg" alt="profilephoto" height="600" class="center">
+    <div class="footer">
+        <h3>Copyrights @Copy Priyanandini Pasupuleti<br>
+        <a href="mailto:priyanandinipasupuleti@gmail.com">priyanandinipasupuleti@gmail.com</a></h3>
+    </div>
+      
+      
 </body>
 </html>
